adicionei o corpo da pagina inicial e link para o css

--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -4,8 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Me.Desapego</title>
+    <link charset="stylesheet" href="./style.css">
 </head>
 <body>
-    <p>Faz a boa ai familia e começa esse caralho de projeto</p>
+    <header>
+        <div class="interface">
+            <div class="logo">
+
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li class="menu-items"><a href="#">Home</a></li>
+                    <li class="menu-items"><a href="#">Livros</a></li>
+                    <li class="menu-items"><a href="#">Quadrinhos</a></li>
+                    <li class="menu-items"><a href="#">Mangás</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="hero-container">
+            <div class="interface">
+                    <div class="hero-items">
+                        <img src="">
+
+                        <h1>Histórias recicladas, objetos reimaginados.</h1>
+
+                        <h2>Itens novos | Semi novos | Usados</h2>
+                        <a href="#" class="botao">
+                            <button>Confira os nossos produtos</button>	
+                        </a>
+                    </div>
+            </div>
+        </section>
+    </main>
+    <section class="produtos-em-destaque">
+        <h3>Produtos em Destaque</h3>
+        <div class="produto1">
+            <img scr="" alt="livro">
+            <strong>Livro</strong>
+            <p>R$99,99<p>
+            <a href="#" class="botao">Adquira já</a>
+        </div>
+        <div class="produto2">
+            <img scr="" alt="livro">
+            <strong>Livro</strong>
+            <p>R$99,99<p>
+            <a href="#" class="botao">Adquira já</a>
+        </div>
+        <div class="produto3">
+            <img scr="" alt="livro">
+            <strong>Livro</strong>
+            <p>R$99,99<p>
+            <a href="#" class="botao">Adquira já</a>
+        </div>
+    </section>
+
+    <section class="produtos-novos">
+        <h2>Produtos novos</h2>
+        <div class="produto4">
+            <img scr="" alt="livro">
+            <strong>Livro</strong>
+            <p>R$99,99<p>
+            <a href="#" class="botao">Adquira já</a>
+        </div>
+        <div class="produto5">
+            <img scr="" alt="livro">
+            <strong>Livro</strong>
+            <p>R$99,99<p>
+            <a href="#" class="botao">Adquira já</a>
+        </div>
+        <div class="produto6">
+            <img scr="" alt="livro">
+            <strong>Livro</strong>
+            <p>R$99,99<p>
+            <a href="#" class="botao">Adquira já</a>
+        </div>
+    </section>
+
+    <aside class="doacoes">
+        <h2>ACEITAMOS DOAÇÕES</h2>
+        <a href="#" class="botao">Entre em contato</a>
+    </aside>
+    
+    <footer class="footer-container">
+        <div>
+            <img src="" alt="">
+        </div>
+        <div>
+            <img src="" alt="icone do Whatsapp">
+            <h2>Fale conosco</h2>
+            <img src="" alt="icone de e-mail">
+            <p>11 99999-9999 São Paulo De segunda a sexta, das 08h ás 18h40 sábado das 09h às 17h20</p>
+            <img src=>
+            <p>site@medesapego.com.br</p>
+            <h2>F.A.Q</h2>
+        </div>
+        <div>
+            <h2>Redes Sociais</h2>
+            <a href="#"><img src="" alt="logo do Instagram"></a>
+            <h2>Nossa História</h2>
+            <p>Mussum Ipsum, cacilds vidis litro abertis. Mé faiz elementum girarzis, nisi eros vermeio. Nulla id gravida magna, ut semper sapien. 					Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Detraxit consequat et quo num tendi nada.</p>
+        </div>
+    </footer>
 </body>
 </html>
