alterções no css - botões

--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -14,10 +14,10 @@
             </div>
             <nav>
                 <ul class="menu">
-                    <li class="menu-items"><a href="#">Home</a></li>
-                    <li class="menu-items"><a href="#">Livros</a></li>
-                    <li class="menu-items"><a href="#">Quadrinhos</a></li>
-                    <li class="menu-items"><a href="#">Mangás</a></li>
+                    <li class="menu-items"><a href="#" class="botao"><button>Home</button></a></li>
+                    <li class="menu-items"><a href="#" class="botao"><button>Livros</button></a></li>
+                    <li class="menu-items"><a href="#" class="botao"><button>Quadrinhos</button></a></li>
+                    <li class="menu-items"><a href="#" class="botao"><button>Mangás</button></a></li>
                 </ul>
             </nav>
         </div>
@@ -28,9 +28,9 @@
                     <div class="hero-items">
                         <img src="">
 
-                        <h1>Histórias recicladas, objetos reimaginados.</h1>
+                        <p id="texto1">Histórias recicladas, objetos reimaginados.</p>
 
-                        <h2>Itens novos | Semi novos | Usados</h2>
+                        <p id="texto2">Itens novos | Semi novos | Usados</p>
                         <a href="#" class="botao">
                             <button>Confira os nossos produtos</button>	
                         </a>
@@ -39,24 +39,24 @@
         </section>
     </main>
     <section class="produtos-em-destaque">
-        <h3>Produtos em Destaque</h3>
+        <h1>Produtos em Destaque</h1>
         <div class="produto1">
             <img scr="" alt="livro">
             <strong>Livro</strong>
             <p>R$99,99<p>
-            <a href="#" class="botao">Adquira já</a>
+            <a href="#" class="botao"><button>Adquira já</button></a>
         </div>
         <div class="produto2">
             <img scr="" alt="livro">
             <strong>Livro</strong>
             <p>R$99,99<p>
-            <a href="#" class="botao">Adquira já</a>
+            <a href="#" class="botao"><button>Adquira já</button></a>
         </div>
         <div class="produto3">
             <img scr="" alt="livro">
             <strong>Livro</strong>
             <p>R$99,99<p>
-            <a href="#" class="botao">Adquira já</a>
+            <a href="#" class="botao"><button>Adquira já</button></a>
         </div>
     </section>
 
@@ -66,25 +66,25 @@
             <img scr="" alt="livro">
             <strong>Livro</strong>
             <p>R$99,99<p>
-            <a href="#" class="botao">Adquira já</a>
+                <a href="#" class="botao"><button>Adquira já</button></a>
         </div>
         <div class="produto5">
             <img scr="" alt="livro">
             <strong>Livro</strong>
             <p>R$99,99<p>
-            <a href="#" class="botao">Adquira já</a>
+                <a href="#" class="botao"><button>Adquira já</button></a>
         </div>
         <div class="produto6">
             <img scr="" alt="livro">
             <strong>Livro</strong>
             <p>R$99,99<p>
-            <a href="#" class="botao">Adquira já</a>
+                <a href="#" class="botao"><button>Adquira já</button></a>
         </div>
     </section>
 
     <aside class="doacoes">
         <h2>ACEITAMOS DOAÇÕES</h2>
-        <a href="#" class="botao">Entre em contato</a>
+        <a href="#" class="botao"><button>Entre em contato</button></a>
     </aside>
     
     <footer class="footer-container">
@@ -98,13 +98,14 @@
             <p>11 99999-9999 São Paulo De segunda a sexta, das 08h ás 18h40 sábado das 09h às 17h20</p>
             <img src=>
             <p>site@medesapego.com.br</p>
-            <h2>F.A.Q</h2>
+            <a href="#"><h2>F.A.Q</h2></a>
         </div>
         <div>
             <h2>Redes Sociais</h2>
             <a href="#"><img src="" alt="logo do Instagram"></a>
             <h2>Nossa História</h2>
-            <p>Mussum Ipsum, cacilds vidis litro abertis. Mé faiz elementum girarzis, nisi eros vermeio. Nulla id gravida magna, ut semper sapien. 					Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Detraxit consequat et quo num tendi nada.</p>
+            <p>Mussum Ipsum, cacilds vidis litro abertis. Mé faiz elementum girarzis, nisi eros vermeio. Nulla id gravida magna, ut semper sapien. 
+            Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Detraxit consequat et quo num tendi nada.</p>
         </div>
     </footer>
 </body>
