comecei a mexer nas seções de produtos

--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -38,75 +38,85 @@
             </div>
         </section>
     </main>
-    <section class="produtos-em-destaque">
-        <h1>Produtos em Destaque</h1>
-        <div class="produto1">
-            <img scr="" alt="livro">
-            <strong>Livro</strong>
-            <p>R$99,99<p>
-            <a href="#" class="botao"><button>Adquira já</button></a>
-        </div>
-        <div class="produto2">
-            <img scr="" alt="livro">
-            <strong>Livro</strong>
-            <p>R$99,99<p>
-            <a href="#" class="botao"><button>Adquira já</button></a>
-        </div>
-        <div class="produto3">
-            <img scr="" alt="livro">
-            <strong>Livro</strong>
-            <p>R$99,99<p>
-            <a href="#" class="botao"><button>Adquira já</button></a>
+    <section class="produtos-box">
+        <div class="interface">
+            <h1 class="titulo">Produtos em Destaque</h1>
+            <div class="flex">
+                <div class="produto">
+                    <img scr="./imgs/papo.png" alt="livro">
+                    <strong>Livro</strong>
+                    <p>R$99,99<p>
+                    <a href="#" class="botao"><button>Adquira já</button></a>
+                </div>
+                <div class="produto">
+                    <img scr="" alt="livro">
+                    <strong>Livro</strong>
+                    <p>R$99,99<p>
+                    <a href="#" class="botao"><button>Adquira já</button></a>
+                </div>
+                <div class="produto">
+                    <img scr="" alt="livro">
+                    <strong>Livro</strong>
+                    <p>R$99,99<p>
+                    <a href="#" class="botao"><button>Adquira já</button></a>
+                </div>
+            </div>    
         </div>
     </section>
 
-    <section class="produtos-novos">
-        <h2>Produtos novos</h2>
-        <div class="produto4">
-            <img scr="" alt="livro">
-            <strong>Livro</strong>
-            <p>R$99,99<p>
+    <section class="produtos-box">
+        <div class="interface">
+            <h2 class="titulo">Produtos novos</h2>
+            <div class="produto">
+                <img scr="" alt="livro">
+                <strong>Livro</strong>
+                <p>R$99,99<p>
                 <a href="#" class="botao"><button>Adquira já</button></a>
-        </div>
-        <div class="produto5">
-            <img scr="" alt="livro">
-            <strong>Livro</strong>
-            <p>R$99,99<p>
+            </div>
+            <div class="produto">
+                <img scr="" alt="livro">
+                <strong>Livro</strong>
+                <p>R$99,99<p>
                 <a href="#" class="botao"><button>Adquira já</button></a>
-        </div>
-        <div class="produto6">
-            <img scr="" alt="livro">
-            <strong>Livro</strong>
-            <p>R$99,99<p>
+            </div>
+            <div class="produto">
+                <img scr="" alt="livro">
+                <strong>Livro</strong>
+                <p>R$99,99<p>
                 <a href="#" class="botao"><button>Adquira já</button></a>
-        </div>
+            </div>
+        </div>    
     </section>
 
     <aside class="doacoes">
-        <h2>ACEITAMOS DOAÇÕES</h2>
-        <a href="#" class="botao"><button>Entre em contato</button></a>
+        <div class="interface">
+            <h2>ACEITAMOS DOAÇÕES</h2>
+            <a href="#" class="botao"><button>Entre em contato</button></a>
+        </div>    
     </aside>
     
     <footer class="footer-container">
-        <div>
-            <img src="" alt="">
-        </div>
-        <div>
-            <img src="" alt="icone do Whatsapp">
-            <h2>Fale conosco</h2>
-            <img src="" alt="icone de e-mail">
-            <p>11 99999-9999 São Paulo De segunda a sexta, das 08h ás 18h40 sábado das 09h às 17h20</p>
-            <img src=>
-            <p>site@medesapego.com.br</p>
-            <a href="#"><h2>F.A.Q</h2></a>
-        </div>
-        <div>
-            <h2>Redes Sociais</h2>
-            <a href="#"><img src="" alt="logo do Instagram"></a>
-            <h2>Nossa História</h2>
-            <p>Mussum Ipsum, cacilds vidis litro abertis. Mé faiz elementum girarzis, nisi eros vermeio. Nulla id gravida magna, ut semper sapien. 
-            Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Detraxit consequat et quo num tendi nada.</p>
-        </div>
+        <div class="interface">
+            <div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <img src="" alt="icone do Whatsapp">
+                <h2>Fale conosco</h2>
+                <img src="" alt="icone de e-mail">
+                <p>11 99999-9999 São Paulo De segunda a sexta, das 08h ás 18h40 sábado das 09h às 17h20</p>
+                <img src=>
+                <p>site@medesapego.com.br</p>
+                <a href="#"><h2>F.A.Q</h2></a>
+            </div>
+            <div>
+                <h2>Redes Sociais</h2>
+                <a href="#"><img src="" alt="logo do Instagram"></a>
+                <h2>Nossa História</h2>
+                <p>Mussum Ipsum, cacilds vidis litro abertis. Mé faiz elementum girarzis, nisi eros vermeio. Nulla id gravida magna, ut semper sapien. 
+                Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Detraxit consequat et quo num tendi nada.</p>
+            </div>
+        </div>    
     </footer>
 </body>
 </html>
