--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -14,10 +14,10 @@
             </div>
             <nav>
                 <ul class="menu">
-                    <li class="menu-items"><a href="#" class="botao"><button>Home</button></a></li>
-                    <li class="menu-items"><a href="#" class="botao"><button>Livros</button></a></li>
-                    <li class="menu-items"><a href="#" class="botao"><button>Quadrinhos</button></a></li>
-                    <li class="menu-items"><a href="#" class="botao"><button>Mangás</button></a></li>
+                    <li class="menu-items"><a href="#" class="botao menu-botao"><button>Home</button></a></li>
+                    <li class="menu-items"><a href="#" class="botao menu-botao"><button>Livros</button></a></li>
+                    <li class="menu-items"><a href="#" class="botao menu-botao"><button>Quadrinhos</button></a></li>
+                    <li class="menu-items"><a href="#" class="botao menu-botao"><button>Mangás</button></a></li>
                 </ul>
             </nav>
         </div>
