Alterações na parte dos produtos

--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -43,19 +43,22 @@
             <h1 class="titulo">Produtos em Destaque</h1>
             <div class="flex">
                 <div class="produto">
-                    <img scr="./imgs/papo.png" alt="livro">
+                    <div class="produto-foto"></div>
+                    <!-- <img scr="./imgs/papo.png" alt="livro"> -->
                     <strong>Livro</strong>
                     <p>R$99,99<p>
                     <a href="#" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
-                    <img scr="" alt="livro">
+                    <div class="produto-foto"></div>
+                    <!-- <img scr="" alt="livro"> -->
                     <strong>Livro</strong>
                     <p>R$99,99<p>
                     <a href="#" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
-                    <img scr="" alt="livro">
+                    <div class="produto-foto"></div>
+                    <!-- <img scr="" alt="livro"> -->
                     <strong>Livro</strong>
                     <p>R$99,99<p>
                     <a href="#" class="botao"><button>Adquira já</button></a>
@@ -66,24 +69,29 @@
 
     <section class="produtos-box">
         <div class="interface">
-            <h2 class="titulo">Produtos novos</h2>
-            <div class="produto">
-                <img scr="" alt="livro">
-                <strong>Livro</strong>
-                <p>R$99,99<p>
-                <a href="#" class="botao"><button>Adquira já</button></a>
-            </div>
-            <div class="produto">
-                <img scr="" alt="livro">
-                <strong>Livro</strong>
-                <p>R$99,99<p>
-                <a href="#" class="botao"><button>Adquira já</button></a>
-            </div>
-            <div class="produto">
-                <img scr="" alt="livro">
-                <strong>Livro</strong>
-                <p>R$99,99<p>
-                <a href="#" class="botao"><button>Adquira já</button></a>
+            <h2 class="titulo produtos-box-titulo">Produtos novos</h2>
+            <div class="flex">
+                <div class="produto">
+                    <div class="produto-foto"></div>
+                    <!-- <img scr="" alt="livro"> -->
+                    <strong>Livro</strong>
+                    <p>R$99,99<p>
+                    <a href="#" class="botao"><button>Adquira já</button></a>
+                </div>
+                <div class="produto">
+                    <div class="produto-foto"></div>
+                    <!-- <img scr="" alt="livro"> -->
+                    <strong>Livro</strong>
+                    <p>R$99,99<p>
+                    <a href="#" class="botao"><button>Adquira já</button></a>
+                </div>
+                <div class="produto">
+                    <div class="produto-foto"></div>
+                    <!-- <img scr="" alt="livro"> -->
+                    <strong>Livro</strong>
+                    <p>R$99,99<p>
+                    <a href="#" class="botao"><button>Adquira já</button></a>
+                </div>
             </div>
         </div>    
     </section>
