Alterações no rodapé

--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -43,7 +43,7 @@
             <h1 class="titulo">Produtos em Destaque</h1>
             <div class="flex">
                 <div class="produto">
-                    <div class="produto-foto the-promissed-never"></div>
+                    <div class="produto-foto></div>
                     <!-- <img scr="./imgs/papo.png" alt="livro"> -->
                     <strong>Livro</strong>
                     <p>R$99,99<p>
