Só falta colocar as imagens dos livros

--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="interface">
-            <div class="logo">
-
+            <div class="header-logo">
+                <img src="imgs/logo.png" alt="logo Desapego.Me" width="80" height="55">
             </div>
             <nav>
                 <ul class="menu">
@@ -26,7 +26,9 @@
         <section class="hero-container">
             <div class="interface">
                 <div class="hero-items">
-                    <img src="">
+                    <div class="hero-logo">
+                        <img src="imgs/logo.png" alt="logo Desapego.Me" width="280" height="222">
+                    </div>
 
                     <p id="texto1">Histórias recicladas, objetos reimaginados.</p>
 
@@ -43,7 +45,7 @@
             <h1 class="titulo">Produtos em Destaque</h1>
             <div class="flex">
                 <div class="produto">
-                    <div class="produto-foto></div>
+                    <div class="produto-foto"></div>
                     <!-- <img scr="./imgs/papo.png" alt="livro"> -->
                     <strong>Livro</strong>
                     <p>R$99,99<p>
