Mudança na logo hero, coloquei a logo da na cor preta

--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -27,7 +27,7 @@
             <div class="interface">
                 <div class="hero-items">
                     <div class="hero-logo">
-                        <img src="imgs/logo.png" alt="logo Desapego.Me" width="280" height="222">
+                        <img src="imgs/logo-preta.png" alt="logo Desapego.Me" width="250" height="192">
                     </div>
 
                     <p id="texto1">Histórias recicladas, objetos reimaginados.</p>
