pagina star wars

--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -14,10 +14,10 @@
             </div>
             <nav>
                 <ul class="menu">
-                    <li class="menu-items"><a href="#" class="botao menu-botao"><button>Home</button></a></li>
-                    <li class="menu-items"><a href="#" class="botao menu-botao"><button>Livros</button></a></li>
-                    <li class="menu-items"><a href="#" class="botao menu-botao"><button>Quadrinhos</button></a></li>
-                    <li class="menu-items"><a href="#" class="botao menu-botao"><button>Mangás</button></a></li>
+                    <li class="menu-items"><a href="index.html" class="botao menu-botao"><button>Home</button></a></li>
+                    <li class="menu-items"><a href="" class="botao menu-botao"><button>Livros</button></a></li>
+                    <li class="menu-items"><a href="" class="botao menu-botao"><button>Quadrinhos</button></a></li>
+                    <li class="menu-items"><a href="" class="botao menu-botao"><button>Mangás</button></a></li>
                 </ul>
             </nav>
         </div>
@@ -49,7 +49,7 @@
                     <!-- <img scr="./imgs/papo.png" alt="livro"> -->
                     <strong>Livro</strong>
                     <p>R$99,99<p>
-                    <a href="#" class="botao"><button>Adquira já</button></a>
+                    <a href="produto1.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
                     <div class="produto-foto"></div>
