troquei os nomes das paginas

--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -52,22 +52,22 @@
                     <div class="produto-foto"></div>
                     <!-- <img scr="./imgs/papo.png" alt="livro"> -->
                     <strong>Livro</strong>
-                    <p>R$99,99<p>
-                    <a href="produto1.html" class="botao"><button>Adquira já</button></a>
+                    <p>R$40,00<p>
+                    <a href="star-wars.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
                     <div class="produto-foto"></div>
                     <!-- <img scr="" alt="livro"> -->
                     <strong>Livro</strong>
-                    <p>R$99,99<p>
-                    <a href="produto2.html" class="botao"><button>Adquira já</button></a>
+                    <p>R$24,00<p>
+                    <a href="mil-coisas-podem-acontecer.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
                     <div class="produto-foto"></div>
                     <!-- <img scr="" alt="livro"> -->
                     <strong>Livro</strong>
-                    <p>R$99,99<p>
-                    <a href="produto3.html" class="botao"><button>Adquira já</button></a>
+                    <p>R$24,00<p>
+                    <a href="robo-selvagem.html" class="botao"><button>Adquira já</button></a>
                 </div>
             </div>    
         </div>
@@ -81,8 +81,8 @@
                     <div class="produto-foto"></div>
                     <!-- <img scr="" alt="livro"> -->
                     <strong>Livro</strong>
-                    <p>R$99,99<p>
-                    <a href="produto4.html" class="botao"><button>Adquira já</button></a>
+                    <p>R$22,00<p>
+                    <a href="the-promised-neverland-vol-15.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
                     <div class="produto-foto"></div>
