--- a/site-me-desapego/produtos.html
+++ b/site-me-desapego/produtos.html
@@ -34,15 +34,22 @@
                     <div class="produto-foto"></div>
                     <!-- <img scr="./imgs/papo.png" alt="livro"> -->
                     <strong>Livro</strong>
-                    <p>R$99,99<p>
-                    <a href="produto1.html" class="botao"><button>Adquira já</button></a>
+                    <p>R40,00<p>
+                    <a href="star-wars.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
                     <div class="produto-foto"></div>
                     <!-- <img scr="" alt="livro"> -->
                     <strong>Livro</strong>
-                    <p>R$99,99<p>
-                    <a href="produto2.html" class="botao"><button>Adquira já</button></a>
+                    <p>R$24,00<p>
+                    <a href="mil-coisas-podem-acontecer.html" class="botao"><button>Adquira já</button></a>
+                </div>
+                <div class="produto">
+                    <div class="produto-foto"></div>
+                    <!-- <img scr="" alt="livro"> -->
+                    <strong>Livro</strong>
+                    <p>R$24,00<p>
+                    <a href="robo-selvagem.html" class="botao"><button>Adquira já</button></a>
                 </div>
             </div>     
         </div>
@@ -57,42 +64,49 @@
                     <div class="produto-foto"></div>
                     <!-- <img scr="./imgs/papo.png" alt="livro"> -->
                     <strong>Livro</strong>
-                    <p>R$99,99<p>
-                    <a href="produto1.html" class="botao"><button>Adquira já</button></a>
+                    <p>R$22,00<p>
+                    <a href="the-promised-neverland-vol-15.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
                     <div class="produto-foto"></div>
                     <!-- <img scr="" alt="livro"> -->
                     <strong>Livro</strong>
-                    <p>R$99,99<p>
-                    <a href="produto2.html" class="botao"><button>Adquira já</button></a>
+                    <p>R$22,00<p>
+                    <a href="re-zero-comecando-uma-nova-vida-em-outro-mundo-vol-12.html" class="botao"><button>Adquira já</button></a>
+                </div>
+                <div class="produto">
+                    <div class="produto-foto"></div>
+                    <!-- <img scr="" alt="livro"> -->
+                    <strong>Livro</strong>
+                    <p>R$22,00<p>
+                    <a href="robo-selvagem.html" class="botao"><button>Adquira já</button></a>
                 </div>
             </div>     
         </div>
     </section>
 
 
-    <section class="produtos-box produtos-box-aba-produtos">
+    <!-- <section class="produtos-box produtos-box-aba-produtos">
         <div class="interface">
             <h1 class="titulo titulo-aba-produtos">Quadrinhos</h1>
             <div class="flex">
                 <div class="produto">
                     <div class="produto-foto"></div>
-                    <!-- <img scr="./imgs/papo.png" alt="livro"> -->
+                     <img scr="./imgs/papo.png" alt="livro">
                     <strong>Livro</strong>
                     <p>R$99,99<p>
                     <a href="produto1.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
                     <div class="produto-foto"></div>
-                    <!-- <img scr="" alt="livro"> -->
+                    <!-- <img scr="" alt="livro"> 
                     <strong>Livro</strong>
                     <p>R$99,99<p>
                     <a href="produto2.html" class="botao"><button>Adquira já</button></a>
                 </div>
             </div>     
         </div>
-    </section>
+    </section> -->
     </main>
 
     <footer class="footer-container footer-container-aba-produtos">
