linkei o botão do hero

--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -37,7 +37,7 @@
                     <p id="texto1">Histórias recicladas, objetos reimaginados.</p>
 
                     <p id="texto2">Itens novos | Semi novos | Usados</p>
-                    <a href="#" class="botao hero-botao">
+                    <a href="produtos.html" class="botao hero-botao">
                         <button>Confira os nossos produtos</button>	
                     </a>
                 </div>
