alteria o o titulo do re zero

--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -94,7 +94,7 @@
                 <div class="produto">
                     <div class="produto-foto"></div>
                     <!-- <img scr="" alt="livro"> -->
-                    <strong>Re:Zero - Começando Uma Vida Em Outro Mundo Vol. 12</strong>
+                    <strong>Re:Zero - Começando Uma Vida <br> Em Outro Mundo Vol. 12</strong>
                     <p>R$99,99<p>
                     <a href="re-zero-comecando-uma-nova-vida-em-outro-mundo-vol-12.html" class="botao"><button>Adquira já</button></a>
                 </div>
