adicionei os textos das abas doaçoes e faq

--- a/site-me-desapego/doacoes.html
+++ b/site-me-desapego/doacoes.html
@@ -29,8 +29,8 @@
         <div class="interface">
             <h2 class="titulo produtos-box-titulo">Sobre doações</h2>
             <div class="flex">
-                <p>Mussum Ipsum, cacilds vidis litro abertis. Mé faiz elementum girarzis, nisi eros vermeio. Viva Forevis aptent taciti sociosqu ad litora torquent. 
-                Eu nunca mais boto a boca num copo de cachaça, agora eu só uso canudis! Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                <p>Se você tem livros em bom estado, dos mais variados gêneros e para diferentes faixas etárias e gostaria de estar passado para frequente,
+                clique no link abaixo e saiba como doar.</p>
                 <a href="https://www.instagram.com/me.desapego/" class="botao"><button>Adquira já</button></a>
             </div>    
         </div>    
