--- a/site-me-desapego/faq.html
+++ b/site-me-desapego/faq.html
@@ -29,10 +29,16 @@
         <div class="interface">
             <h2 class="titulo produtos-box-titulo">Perguntas frequentes</h2>
             <div class="flex">
-                <h3>Blablablab</h3>
-                <p>blebelb</p>
-                <h3>blablabalba</h3>
-                <p>balbalbal</p>
+                <h3>1.Como faço para realizar uma compra?</h3>
+                <p>Resposta: Para efetuar uma compra basta escolher o produto desejado, clicar de no botão de finalização da sua compra que você sera redirecionado a um chat, 
+                onde lhe passarei todos detalhes referentes a pagamento, envio e etc.</p>
+                <h3>2. Pergunta: Quais são as opções de pagamento disponíveis?</h3>
+                <p>Resposta: Aceitamos diversas formas de pagamento, incluindo cartões de crédito (Visa, MasterCard, etc.), 
+                boleto bancário, transferência bancária e pix.</p>
+                <h3>3.Pergunta: Como posso rastrear meu pedido após a compra?</h3>
+                <p>Resposta: Após a confirmação da compra, estarei envinado os detalhes do pedido, incluindo um link para rastreamento, assim que pedido for postado nos correios.</p>
+                <h3>4. Pergunta: Como funciona o processo de devolução e troca?</h3>
+                <p>Resposta: Não trabalhamos como devoluçoes e trocas, pois os exemplares de cada produtos são unicos, não havendo reposiçóes.</p>
             </div>
         </div>    
     </section>
