--- a/site-me-desapego/produtos.html
+++ b/site-me-desapego/produtos.html
@@ -77,7 +77,7 @@
                 <div class="produto">
                     <div class="produto-foto"></div>
                     <!-- <img scr="" alt="livro"> -->
-                    <strong>Re:Zero - Começando Uma Vida Em Outro Mundo Vol. 12</strong>
+                    <strong>Re:Zero - Começando Uma Vida <br> Em Outro Mundo Vol. 12</strong>
                     <p>R$22,00<p>
                     <a href="re-zero-comecando-uma-nova-vida-em-outro-mundo-vol-12.html" class="botao"><button>Adquira já</button></a>
                 </div>
