alterei o texto da aba doações

--- a/site-me-desapego/doacoes.html
+++ b/site-me-desapego/doacoes.html
@@ -29,7 +29,7 @@
         <div class="interface">
             <h2 class="titulo produtos-box-titulo">Sobre doações</h2>
             <div class="flex">
-                <p>Se você tem livros em bom estado, dos mais variados gêneros e para diferentes faixas etárias e gostaria de estar passado para frequente,
+                <p>Se você tem livros em bom estado, dos mais variados gêneros e para diferentes faixas etárias e gostaria de estar passado para frente,
                 clique no link abaixo e saiba como doar.</p>
                 <a href="https://www.instagram.com/me.desapego/" class="botao"><button>Adquira já</button></a>
             </div>    
