--- a/site-me-desapego/doacoes.html
+++ b/site-me-desapego/doacoes.html
@@ -31,7 +31,7 @@
             <div class="flex">
                 <p>Se você tem livros em bom estado, dos mais variados gêneros e para diferentes faixas etárias e gostaria de estar passado para frente,
                 clique no link abaixo e saiba como doar.</p>
-                <a href="https://www.instagram.com/me.desapego/" class="botao"><button>Adquira já</button></a>
+                <a href="https://www.instagram.com/me.desapego/" class="botao"><button>Entre em contato</button></a>
             </div>    
         </div>    
     </section>
